# djpp

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: health.py  jobs.py
app/models/: health.py  job.py
tests/: conftest.py  test_api_health.py  test_api_jobs.py
tests/unit/: test_models_health.py  test_models_job.py
