[project]
name = "distributed-job-proocessing-platform"
version = "0.1.0"
description = "A REST API for tracking personal finances built with FastAPI."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Marc Donovan" }
]

dependencies = [
    "fastapi[standard]>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "swagger-ui>=0.1.2",
    "httpx2>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
